--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -24,7 +24,16 @@
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
-
+        <nav id="primarynav">
+            <span id="accntnav">
+                <a href="/admin">Admin</a>
+                <a href="">logout</a>
+            </span>
+            <a href="/">Home</a> 
+            <a href="/shifts">Shifts</a> 
+            <a href="/departments">Depts</a> 
+            <a href="/profile">Profile</a>             
+        </nav>        
         {% block content %}
         {% endblock content %}
 
