--- a/volunteer/templates/home.html
+++ b/volunteer/templates/home.html
@@ -4,6 +4,9 @@
 
 {% block content %}
     <!-- Add your site or application content here -->
-    <p>{% trans "Hello world! This is Django HTML5 Boilerplate." %}</p>
-    <p>{% trans "Edit 'templates/home.html' to modify this content." %}</p>
+    <h1>Apogaea Volunteer System</h1>
+    <section>
+    	<h2>Section Heading Test</h2>
+    	<p>Welcome to Apogaea's volunteer network.</p>
+    </section>
 {% endblock %}
