--- a/departments/templates/departments/index.html
+++ b/departments/templates/departments/index.html
@@ -4,13 +4,6 @@
 
 {% block content %}
     <!-- Add your site or application content here -->
-
-<h1>Volunteer Shifts</h1>
-
-<section id="shiftgrid">
-
-    <p>Shifts...</p>
-
-</section>    
+    <p>Departments...</p>
 {% endblock %}
 
