--- a/shifts/templates/shifts/index.html
+++ b/shifts/templates/shifts/index.html
@@ -8,6 +8,8 @@
 <h1>Volunteer Shifts</h1>
 
 <section id="shiftgrid">
+    <h2>Default Style</h2>
+    <h2 class="different"><span>With Spans</span></h2>
 
     <p>Shifts...</p>
 
