--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -12,6 +12,7 @@
         <meta name="description" content="{% block meta_description %}{% endblock %}" />
         <meta name="author" content="{% block meta_author %}{% endblock %}" />
         <meta name="viewport" content="width=device-width" />
+        <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css" />
         <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css" />
         {% block css %}{% endblock %}
