--- a/volunteer/templates/home.html
+++ b/volunteer/templates/home.html
@@ -6,7 +6,7 @@
     <!-- Add your site or application content here -->
     <h1>Apogaea Volunteer System</h1>
     <section>
-    	<h2>Section Heading Test</h2>
+    	<h2 class="different"><span>Section Heading Test</span></h2>
     	<p>Welcome to Apogaea's volunteer network.</p>
     </section>
 {% endblock %}
