--- a/shifts/templates/shifts/index.html
+++ b/shifts/templates/shifts/index.html
@@ -8,8 +8,10 @@
 <h1>Volunteer Shifts</h1>
 
 <section id="shiftgrid">
-    <h2>Default Style</h2>
-    <h2 class="different"><span>With Spans</span></h2>
+    <h2><span>Tuesday, June 3rd</span></h2>
+    <h2><span>Wednesday, June 4th</span></h2>
+    <h2><span>Thursday, June 5th</span></h2>
+
 
     <p>Shifts...</p>
 
