--- a/volunteer/templates/home.html
+++ b/volunteer/templates/home.html
@@ -5,8 +5,8 @@
 {% block content %}
     <!-- Add your site or application content here -->
     <h1>Apogaea Volunteer System</h1>
-    <section>
-    	<h2 class="different"><span>Section Heading Test</span></h2>
+    <section>    	
     	<p>Welcome to Apogaea's volunteer network.</p>
+    	<p>Go fill some shifts!</p>
     </section>
 {% endblock %}
