--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -28,7 +28,7 @@
         <nav id="primarynav">
             <span id="accntnav">
                 <a href="/admin">Admin</a>
-                <a href="">logout</a>
+                <a href="/admin/logout">logout</a>
             </span>
             <a href="/">Home</a> 
             <a href="/shifts">Shifts</a> 
