--- a/shifts/templates/shifts/index.html
+++ b/shifts/templates/shifts/index.html
@@ -23,6 +23,11 @@
 
     <p>Shifts...</p>
 
+
+<section>{{ department_list }}</section>
+
+<section>{{ shift_list }}</section>
+
 </section>    
 {% endblock %}
 
