--- a/static/css/main.css
+++ b/static/css/main.css
@@ -100,11 +100,8 @@ body {
     background-position: center top, center bottom, center top;
     background-repeat: no-repeat, no-repeat, repeat-y;
      background-attachment: fixed;  
-    color: #aa8;
+    color: #000;
 
-    border-left: 1px solid #b33411;
-    border-right: 1px solid #b33411;
-    border-bottom: 1px solid #b33411;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     padding: 0px 4px 10px 4px;
@@ -132,19 +129,19 @@ a {
 }
 
 h1 {
-    color: #cfa728;
+    color: #7C330A;
     font-size: 1.2em;
     font-family: 'NeuropolXFree','Abel','NeuropolXFree';
     margin: -4px; 
-    padding: 4px;
+    padding: 4px 8px;
     background: #000;  
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(230, 240, 229, 0.60);
 }
 h2 {
     font-size: 1em;
     padding: 0px 5%;
     margin: 4px 0px;
-    background: #c39f25;
+    background-color: rgba(28,28,28,0.8);
     color: #000;
     border-radius: 6px;
     border-bottom-left-radius: 0px;    
@@ -153,14 +150,15 @@ h2 {
 }
 
 h2 span{
-    background: #000;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.6);
     margin: 0px;
-    padding: 2px;
+    padding: 2px 10px 2px 30px;
     font-size: 1.2em;
     color: #979bfd;
+
     letter-spacing: -1px;
     font-weight: normal;
+    display: inline-block;
 }
 
 #accntnav {
@@ -169,9 +167,9 @@ h2 span{
 
 body nav,
 body section {
-    border: 1px solid #b33411;
     border-radius: 6px;
-    background: #000;  
+    background: #fff;  
+    background-color: rgba(230, 240, 229, 0.75);
 }
 body nav{
     padding: 2px;
@@ -186,16 +184,22 @@ body section {
 #primarynav {}
 #primarynav a {
     display: inline-block;
-    padding: 0px 4px;
-    margin: 2px;
-    background: #c07228;
-    border-radius: 4px;
+    padding: 3px 2px;
+    margin: 0px 1px 0px 0px;
+    background: #fff;
+    border-radius: 3px;
     color: #000;  
     font-size: 0.9em;
+
+   background: #7f2008;
+    background-color: rgba(127,32,8,0.8);
+
+   color: #e8d758;
+
 }
 #primarynav a:hover {
-    color: #000;
-    background: #d9d1bb;
+    color: #fff;
+   background: #7f2008;
 }
 
 #shiftgrid {}
@@ -234,9 +238,6 @@ hr.close {
 @media only screen and (min-width: 550px) {
     /* Style adjustments for viewports that meet the condition */
     body {
-        border-left: 2px solid #b33411;
-        border-right: 2px solid #b33411;
-        border-bottom: 2px solid #b33411;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         margin: 108px 20px 10px 20px;
@@ -255,15 +256,14 @@ hr.close {
     }    
     body nav,
     body section {
-        border: 2px solid #b33411;
         border-radius: 10px;
         margin-left: -20px;
         margin-right: -20px;
         padding : 8px;
     }    
     #primarynav a {
-        margin: 0px 3px;
-        padding: 2px 6px 1px 6px;
+        margin: 0px 2px;
+        padding: 5px 2px;
         border-radius: 8px;
         font-size: 1em;
         font-weight: bold;
@@ -273,9 +273,6 @@ hr.close {
 @media only screen and (min-width: 800px) {
     /* Style adjustments for viewports that meet the condition */
     body {
-        border-left: 3px solid #b33411;
-        border-right: 3px solid #b33411;
-        border-bottom: 3px solid #b33411;
         border-bottom-left-radius: 15px;
         border-bottom-right-radius: 15px;
         font-size: 1em;
@@ -294,13 +291,12 @@ hr.close {
     }        
     body nav,
     body section {
-        border: 3px solid #b33411;
         border-radius: 15px;
-        padding : 12px;
+        padding : 4px 12px;
     }    
     #primarynav a {
         margin: 0px 4px;
-        padding: 2px 8px 1px 8px;
+        padding: 8px 8px 2px 8px;
         border-radius: 10px;
         font-size: 1.1em;
     }       
