--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -6,10 +6,9 @@
     <h1><span>Register</span></h1>
     <section>
 
-<form action="." method="post">{% csrf_token %}
-
-{{ form }}
-<input type="submit" />
+<form action="{% url 'register' %}" method="post">{% csrf_token %}
+    {% include 'partials/form_as_fieldsets.html' %}
+    <input type="submit" />
 </form>
 
 	</section>
