--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load staticfiles %}<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -11,13 +11,13 @@
         <meta name="description" content="{% block meta_description %}{% endblock %}" />
         <meta name="author" content="{% block meta_author %}{% endblock %}" />
         <meta name="viewport" content="width=device-width" />
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css" />
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css" />
+        <link rel="stylesheet" href="{% static 'css/normalize.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/main.css' %}" />
         {% block css %}{% endblock %}
         
-        <script src="{{ STATIC_URL }}js/vendor/modernizr-2.6.2.min.js"></script>
-        <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Michroma|Poiret+One|Montserrat+Alternates:400,700|Nova+Square|Varela|Comfortaa:400,700' rel='stylesheet' type='text/css'>
+        <script src="{% static 'js/vendor/modernizr-2.6.2.min.js' %}"></script>
+        <link href='//fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+        <link href='//fonts.googleapis.com/css?family=Michroma|Poiret+One|Montserrat+Alternates:400,700|Nova+Square|Varela|Comfortaa:400,700' rel='stylesheet' type='text/css'>
 
 
     </head>
@@ -30,9 +30,12 @@
         <nav id="primarynav">
             <span id="accntnav">
                 {% if user.is_authenticated %}
-                <a href="/admin">Admin</a>
+                  {% if user.is_admin %}
+                    <a href="/admin">Admin</a>
+                  {% endif %}
                 <a href="{% url 'logout' %}">logout {{ user.get_full_name }} </a>
                 {% else %}
+                <a href="{% url 'register' %}">Register</a>
                 <a href="{% url 'login' %}">Login</a>
                 {% endif %}
             </span>
