--- a/shifts/templates/shifts/shifts.html
+++ b/shifts/templates/shifts/shifts.html
@@ -7,51 +7,57 @@
 <h1>Volunteer Shifts</h1>
 
 <section id="shiftgrid">
-{% for day, by_department_lists in shifts_lists.items %}
-    <h2><span>{{ day|date:"l, M jS, Y" }}</span></h2>
-    <table width="100%">
-    {% for department, by_length_lists in by_department_lists.items %}
-        <tr>
-            <th width="8%" class="department">{{ department }}</td>
-            <td width="92%">
-                <table width="98%">
-                    <tr class="hours">
-                        <th>12a</th><th>1a</th><th>2a</th>
-                        <th>3a</th><th>4a</th><th>5a</th>
-                        <th>6a</th><th>7a</th><th>8a</th>
-                        <th>9a</th><th>10a</th><th>11a</th>
-                        <th>12p</th><th>1p</th><th>2p</th>
-                        <th>3p</th><th>4p</th><th>5p</th>
-                        <th>6p</th><th>7p</th><th>8p</th>
-                        <th>9p</th><th>10p</th><th>11p</th>
-                    </tr>
-                    <tr>
-                    {% for shift_length, by_hour_lists in by_length_lists.items %}
-                        {% for hour, shifts in by_hour_lists.items %}
-                            {% if shifts %}
-                            <td class="shift" colspan="{{ shift_length }}">
-                            {% for shift in shifts %}
-                                {% if shift.owner %}
-                                    <a class="claimed-shift" href="/shifts/release/{{ shift.id }}" alt="{{ shift.owner }}" title="{{ shift.owner }}">{{ shift.owner|stringformat:"s"|slice:":6" }}..</a>
-                                {% else %}
-                                    <a class="open-shift" href="/shifts/claim/{{ shift.id }}">o p e n</a>
-                                {% endif %}
+
+{% regroup grouped_shifts by date as shifts_by_dates %}
+{% for shifts_on_date in shifts_by_dates %}
+    {% ifchanged %}<h2><span>{{ shifts_on_date.grouper|date:"l, M jS, Y" }}</span></h2>{% endifchanged %}
+    
+    {% regroup shifts_on_date.list by department as shifts_by_departments %}
+    {% for shifts_in_department in shifts_by_departments %}
+        <table width="100%">
+            <tr>
+                <th width="8%" class="department">{{ shifts_in_department.grouper }}</td>
+                <td width="92%">
+                {% regroup shifts_in_department.list by length as shifts_by_lengths %}
+                {% for length in shifts_by_lengths %}
+                    <table width="98%">
+                        <tr class="hours">
+                            <th>12a</th><th>1a</th><th>2a</th>
+                            <th>3a</th><th>4a</th><th>5a</th>
+                            <th>6a</th><th>7a</th><th>8a</th>
+                            <th>9a</th><th>10a</th><th>11a</th>
+                            <th>12p</th><th>1p</th><th>2p</th>
+                            <th>3p</th><th>4p</th><th>5p</th>
+                            <th>6p</th><th>7p</th><th>8p</th>
+                            <th>9p</th><th>10p</th><th>11p</th>
+                        </tr>
+                        <tr>
+                            {% for row in length.list %}
+                                {% for cell in row.tabular %}
+                                <td class="{{ cell.class }}" colspan="{{ cell.columns }}">
+                                    {% if cell.id > 0 %} 
+                                        {% if cell.owner %}
+                                            <a class="claimed-shift" href="/shifts/release/{{ cell.id }}" alt="{{ cell.owner }} @ {{ cell.start_at }}" title="{{ cell.owner }} @ {{ cell.start_at }}">{{ shift.owner|stringformat:"s"|slice:":6" }}..</a>
+                                        {% else %}
+                                            <a class="open-shift" href="/shifts/claim/{{ cell.id }}" alt="{{ cell.start_at }}" title="{{ cell.start_at }}">o p e n</a>
+                                        {% endif %}
+                                    {% endif %}
+                                </td>
+                                {% endfor %}
                             {% endfor %}
-                            </td>
-                            {% else %}
-                            <td class="empty"></td>
-                            {% endif %}
-                        {% endfor %}
-                        </td>
-                    {% endfor %}
-                    </tr>
-                </table>
-            </td>
-        </tr>
+
+                        </tr>
+                    </table>
+                {% endfor %}
+                </td>
+            </tr>
+        </table>
     {% endfor %}
-    </table>
-    <hr class="close" />
 {% endfor %}
+
+
+
+
 </section>    
 {% endblock %}
 
