--- a/shifts/templates/shifts/shifts.html
+++ b/shifts/templates/shifts/shifts.html
@@ -34,15 +34,24 @@
                         {% for row in length.list %}
                             <tr>
                                 {% for cell in row.tabular %}
-                                    <td class="{{ cell.class }}" colspan="{{ cell.columns }}">
-                                        {% if cell.shift.owner %}
-                                            <span><a class="claimed-shift" href="/shifts/release/{{ shift.id }}" alt="{{ shift.owner }} @ {{ shift.start_at }}" title="{{ shift.owner }} @ {{ shift.start_at }}">{{ shift.owner|stringformat:"s"|slice:":6" }}..</a></span>
-                                        {% elif cell.shift %}
-                                            <span><a class="open-shift" href="/shifts/claim/{{ shift.id }}" alt="{{ shift.start_at }}" title="{{ shift.start_at }}">o p e n</a></span>
-                                        {% endif %}                                        
+                                    <td class="{{ cell.classes }}" colspan="{{ cell.columns }}">
+                                        {% if cell.shift %}
+                                            <form class="claim-shift" action="{% url 'shift-detail' pk=cell.shift.pk %}" method="post">
+                                                {% if cell.shift.requires_code %}
+                                                    <input type="hidden" name="verification_code" value="">
+                                                {% endif %}
+                                                {% if cell.shift.owner %}
+                                                    <input type="hidden" name="owner" value="">
+                                                    {{ cell.shift.owner|truncatechars:8 }}
+                                                {% else %}
+                                                    <input type="hidden" name="owner" value="{{ user.pk }}">
+                                                    o p e n
+                                                {% endif %}
+                                                <input type="submit" value="{{ cell.shift }}">
+                                            </form>
+                                        {% endif %}
                                     </td>
                                 {% endfor %}
-
                             </tr>
                         {% endfor %}
                         <tr class="bottom"><th colspan="24"></th></tr>
