--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -19,7 +19,15 @@
         <link href='//fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Michroma|Poiret+One|Montserrat+Alternates:400,700|Nova+Square|Varela|Comfortaa:400,700' rel='stylesheet' type='text/css'>
 
-
+        {% block javascript %}
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+        <script src="{% static 'js/plugins.js' %}"></script>
+        <script src="{% static 'js/main.js' %}"></script>
+        <script>
+          {% if user.is_authenticated %}window.user = {{ user.pk }};{% endif %}
+        </script>
+        {% endblock javascript %}
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
@@ -46,15 +54,6 @@
         </nav>        
         {% block content %}
         {% endblock content %}
-
-        {% block javascript_library %}
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{ STATIC_URL }}js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-        <script src="{{ STATIC_URL }}js/plugins.js"></script>
-        <script src="{{ STATIC_URL }}js/main.js"></script>
-        {% endblock javascript_library %}
-        {% block javascript %}
-        {% endblock javascript %}
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
