--- a/volunteer/public/css/main.css
+++ b/volunteer/public/css/main.css
@@ -326,6 +326,14 @@ hr.close {
 }
 
 
+/*
+ * Modal window stylin
+ */
+form.claim-shift-modal {
+    background-color: #ffffff;
+    border: 5 5;
+}
+
 
 
 @media only screen and (min-width: 550px) {
