--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="{% static 'css/main.css' %}" />
         {% block css %}{% endblock %}
         
-        <script src="{% static 'js/vendor/modernizr-2.6.2.min.js' %}"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
         <link href='//fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Michroma|Poiret+One|Montserrat+Alternates:400,700|Nova+Square|Varela|Comfortaa:400,700' rel='stylesheet' type='text/css'>
 
@@ -23,7 +23,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.2/handlebars.min.js"></script>
-        <script src="{% static 'js/vendor/jquery.simplemodal-1.4.4.js' %}"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/simplemodal/1.4.4/jquery.simplemodal.min.js"></script>
         <script src="{% static 'js/plugins.js' %}"></script>
         <script src="{% static 'js/main.js' %}"></script>
         <script>
